<resources>
    <string name="app_name">PikCat</string>
    <string name="nav_home">Home</string>
    <string name="nav_order">Order</string>
    <string name="nav_history">History</string>
    <string name="nav_akun">Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pikcat">PikCat</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Name</string>
    <string name="email">E-Mail</string>
    <string name="no_telp">No Telp</string>

    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_now">Create Now</string>
    <string name="ready">Already have an account?</string>
    <string name="minimum_password">Password Anda Kurang Lengkap</string>
    <string name="auth_failed">Maaf User Tidak Ditemukan</string>


</resources>
