<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/main_background"
        app:srcCompat="@drawable/main_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="238dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

            <AutoCompleteTextView
                android:id="@+id/tv_usr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_action_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_ipt"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/tv_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_action_pass"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/color_ipt"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin2"
            android:layout_marginVertical="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_backgroun"
            android:text="@string/sign_in"
            android:textColor="@color/color_btn"
            android:textSize="@dimen/font_btn"
            style="@style/Widget.AppCompat.Button"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="187dp"
        android:layout_marginRight="187dp"
        android:layout_marginBottom="127dp"
        android:background="@drawable/facebook_icon" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:layout_marginBottom="127dp"
        android:background="@drawable/google_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="91dp"
        android:text="@string/don_t_have_an_account" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="208dp"
        android:layout_marginLeft="208dp"
        android:layout_marginBottom="90dp"
        android:text="@string/create_now"
        android:textStyle="bold"/>

</RelativeLayout>